--- a/main.html
+++ b/main.html
@@ -8,7 +8,12 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
+	<div>
+<h1>Testimonials</h1>
+<p>This product is amazing! I highly recommend it to anyone in need of a solution like this.<sub><cite>- John Doe</cite></sub></p>
+<p>I have been using this for a few weeks now and it has completely transformed my workflow.<sub> <cite>-Jane Smith</cite><sub></p>
+</div>	
+<script type="text/javascript" src="./script.js">
 </script>
 
 </body>
