--- a/main.html
+++ b/main.html
@@ -8,11 +8,18 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<div>
-<h1>Testimonials</h1>
-<p>This product is amazing! I highly recommend it to anyone in need of a solution like this.<sub><cite>- John Doe</cite></sub></p>
-<p>I have been using this for a few weeks now and it has completely transformed my workflow.<sub> <cite>-Jane Smith</cite><sub></p>
-</div>	
+	    <div>
+           <h1>Testimonials</h1
+		</div>					   
+		<div id="d1">
+	    	<p>This product is amazing! I highly recommend it to anyone in need of a solution like this.</p>
+	    	<p id="author">- John Doe</p>
+		</div>
+	<div id="d2">
+        <p>I have been using this for a few weeks now and it has completely transformed my workflow.</p>
+		<p id="author">-Jane Smith</p>
+   </div>	
+	
 <script type="text/javascript" src="./script.js">
 </script>
 
